--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
     "@vitejs/plugin-react": "4.3.1",
-    "@vite-pwa/plugin": "0.20.5",
+    "@vite-pwa/vite": "0.20.5",
     "autoprefixer": "10.4.20",
     "postcss": "8.4.47",
     "tailwindcss": "3.4.13",
