--- a/package.json
+++ b/package.json
@@ -14,16 +14,15 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.26.2",
-
-    "@tiptap/react": "^2.6.6",
-    "@tiptap/starter-kit": "^2.6.6",
-    "@tiptap/extension-link": "^2.6.6",
-    "@tiptap/extension-image": "^2.6.6",
-    "@tiptap/extension-underline": "^2.6.6",
-    "@tiptap/extension-text-style": "^2.6.6",
-    "@tiptap/extension-color": "^2.6.6",
-    "@tiptap/extension-placeholder": "^2.6.6",
-    "tiptap-markdown": "^0.8.10"
+    "@tiptap/react": "2.6.6",
+    "@tiptap/starter-kit": "2.6.6",
+    "@tiptap/extension-link": "2.6.6",
+    "@tiptap/extension-image": "2.6.6",
+    "@tiptap/extension-underline": "2.6.6",
+    "@tiptap/extension-text-style": "2.6.6",
+    "@tiptap/extension-color": "2.6.6",
+    "@tiptap/extension-placeholder": "2.6.6",
+    "tiptap-markdown": "0.8.10"
   },
   "devDependencies": {
     "@types/react": "18.3.5",
