--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.26.2",
+
     "@tiptap/react": "2.6.6",
     "@tiptap/starter-kit": "2.6.6",
     "@tiptap/extension-link": "2.6.6",
@@ -22,7 +23,11 @@
     "@tiptap/extension-text-style": "2.6.6",
     "@tiptap/extension-color": "2.6.6",
     "@tiptap/extension-placeholder": "2.6.6",
-    "tiptap-markdown": "0.8.10"
+    "@tiptap/extension-highlight": "2.6.6",
+    "@tiptap/extension-font-family": "2.6.6",
+
+    "tiptap-markdown": "0.8.10",
+    "turndown": "7.2.0"
   },
   "devDependencies": {
     "@types/react": "18.3.5",
